apps/base/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  type: LoadBalancer
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
      name: http
